--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "express-session": "^1.17.3",
     "mongoose": "^7.0.4",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "passport": "^0.6.0"
   }
 }
