--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "mongoose": "^7.0.4",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.22",
-    "passport": "^0.6.0"
+    "passport": "^0.6.0",
+    "passport-google-oauth": "^2.0.0"
   }
 }
