--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "morgan": "^1.10.0",
     "nodemon": "^2.0.22",
     "passport": "^0.6.0",
-    "passport-google-oauth": "^2.0.0"
+    "passport-google-oauth": "^2.0.0",
+    "session": "^0.1.0"
   }
 }
