--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "method": "^2.0.0",
+    "method-override": "^3.0.0",
     "mongoose": "^7.0.4",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.22",
+    "override": "^0.0.1",
     "passport": "^0.6.0",
     "passport-google-oauth": "^2.0.0",
     "session": "^0.1.0"
