--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "passport-google-oauth": "^2.0.0",
     "session": "^0.1.0",
     "scripts": {
-      "starts": "node server.js"
+      "start": "node server.js"
     }
   }
 }
